2006-04-09 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/AvatarCamera.cpp: fixed a bug with the picking, also make sure that the result is sorted by distance

2006-04-09 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/EntityWorldPickListener.cpp: use the distance specified in the picking result instead of regenerating it

2006-04-09 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/TerrainGenerator.cpp, src/components/ogre/TerrainGenerator.h: modifications to better allow for regeneration of the terrain

2006-04-08 Erik Hjortsberg  <erik@katastrof.nu>

	*src/components/ogre/ogreopcode/include/IOgreCollisionShape.h, src/components/ogre/ogreopcode/include/OgreBoxCollisionShape.h, src/components/ogre/ogreopcode/include/OgreOpcodeUtils.h, src/components/ogre/ogreopcode/include/OgreOrientedBox.h, src/components/ogre/ogreopcode/include/OgrePtrCollisionShape.h, src/components/ogre/ogreopcode/include/OgreSphereMeshCollisionShape.h, src/components/ogre/ogreopcode/include/OgreTriangle.h, src/components/ogre/ogreopcode/opcode/OPC_RayCollider.cpp, src/components/ogre/ogreopcode/opcode/OPC_TriTriOverlapGilvan.h, src/components/ogre/ogreopcode/opcode/Ice/IceMatrix4x4.cpp, src/components/ogre/ogreopcode/opcode/Ice/IceMatrix4x4.h, src/components/ogre/ogreopcode/src/IOgreCollisionShape.cpp, src/components/ogre/ogreopcode/src/OgreBoxCollisionShape.cpp, src/components/ogre/ogreopcode/src/OgrePtrCollisionShape.cpp, src/components/ogre/ogreopcode/src/OgreSphereMeshCollisionShape.cpp: added missing files

2006-04-01 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/SceneManagers/EmberPagingSceneManager/src/EmberPagingLandScapeData2D_HeightField.cpp: allow for updates to the height data

2006-04-01 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/SceneManagers/EmberPagingSceneManager/src/OgrePagingLandScapeRaySceneQuery.cpp: include the distance in the result so it can be sorted
